<resources>
    <string name="app_name">Library</string>

    <string name="lng_chinese">中文</string>
    <string name="lng_english">English</string>
    <string name="lng_japanese">日本語</string>
    <string name="lng_korean">한국어</string>
    <string name="introductionToLibrary">图书馆简介</string>
    <string name="guideLanguage">导览语言</string>
    <string name="questionnaireInvestigation">问卷调查</string>
    <string name="interactiveAnswer">互动答题</string>
    <string name="deviceInformation">设备信息</string>
    <string name="guide">导览</string>
    <string name="exhibits_list">展品列表</string>
    <string name="auto_play">自动播放</string>
    <string name="f">F</string>
    <string name="guide_to_there">导航到这里</string>
    <string name="duration_empty">00:00</string>
    <string name="my_friends">我的伙伴</string>
    <string name="my_friends2">我的同伴</string>
    <string name="friends_list">伙伴列表</string>
    <string name="add">添加</string>
    <string name="ti">题</string>
    <string name="ti_total">总计：</string>
    <string name="ti_right">正确：</string>
    <string name="ti_wrong">错误：</string>
    <string name="friend_list_desc">将你的小伙伴的导览机设备ID录入在这里，
        录入后你就可以通过导览地图实时的看到你的小伙伴的位置\n\n设备ID可以在设备信息里面找到</string>
    <string name="introductionToLibrary_content">\u3000\u3000山西省图书馆是国内为数不多的百年老馆之一，是由政府主办的公益性、
        免费对外开放的公共文化场所。\n\u3000\u3000山西省图书馆创始于1909年。1919年为山西教育图书博物馆，1925年为山西公立图书馆，
        1933年为山西省立民众教育馆，1949年为山西省图书博物馆。1957年成立山西省图书馆筹备处，正式与博物馆分离独立建制，
        馆址选在迎泽公园西畔文源巷（文源巷因此而得名）。1960年8月28日，山西省图书馆正式对外开放，文坛泰斗郭沫若亲笔题写馆名。
        \n\u3000\u3000据2016年7月该图书馆官网信息显示，馆藏总量340余万册（件），其中图书169万册，报刊87万册，古籍30万册（件），
        视听、缩微、电子图书及其他文献54万册（件）。馆藏珍品包括北宋雍熙三年刻《佛说北斗七星经》、
        伪齐阜昌八年刻《成唯识论了义灯钞科文》等海内外孤本，以及明嘉靖《山西通志》、
        刘大鹏《退想斋日记》等珍稀地方文献和特色文献。\n\u3000\u30002017年4月至2018年4月，
        原文化部组织开展了第六次全国县级以上公共图书馆评估定级工作。经评估，山西省图书馆评估定级为一级公共图书馆。</string>

</resources>
